--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
+}
+
 #rock {
     background-color: blueviolet;
 }
@@ -20,7 +28,7 @@
     border-radius: 5px;
     padding: 8px 16px;
     margin: 16px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: white
 }
 
 
@@ -28,4 +36,14 @@
     display: flex;
     justify-content: center;
     padding: 8px;
+    font-weight: bold;
+    color: goldenrod;
 }
+
+#endresult {
+    padding: 8px;
+    font-weight: bolder;
+    font-size: 44px;
+    color: red;
+}
+
